[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nianyi-agent-services"
version = "0.1.0"
description = "Reusable image generation and TTS service adapters for personal Agent projects."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "agent",
    "image-generation",
    "minimax",
    "openai",
    "tts",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[tool.setuptools]
packages = [
    "services",
    "services.image",
    "services.tts",
]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
services = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
